create day 1 folder

--- a/AdventCode2020/AdventCode2020.fsproj
+++ b/AdventCode2020/AdventCode2020.fsproj
@@ -8,9 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Include="part1.fsx" />
         <Compile Include="Program.fs" />
-        <Content Include="input.txt" />
+        <Content Include="day1\input.txt" />
+        <None Include="day1\part1.fsx" />
     </ItemGroup>
 
     <ItemGroup>
