--- a/AdventCode2020/AdventCode2020.fsproj
+++ b/AdventCode2020/AdventCode2020.fsproj
@@ -8,16 +8,28 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="TryItTests.fs" />
         <Compile Include="Program.fs" />
         <Content Include="day1\input.txt" />
-        <None Include="day1\part1.fsx" />
+        <None Include="day1\part1Andpart2.fsx" />
+        <None Include="day2\day2.fsx" />
+        <Content Include="day2\input.txt" />
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="FParsec" Version="1.1.1" />
+        <PackageReference Include="FsUnit" Version="4.0.2" />
+        <PackageReference Include="FsUnit.xUnit" Version="4.0.2" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
         <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
         <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
         <PackageReference Include="coverlet.collector" Version="1.3.0" />
+        <PackageReference Include="Unquote" Version="5.0.0" />
+        <PackageReference Include="xunit" Version="2.4.1" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
 </Project>
