--- a/AdventCode2020/AdventCode2020.fsproj
+++ b/AdventCode2020/AdventCode2020.fsproj
@@ -8,7 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="FParsecHelper.fs" />
         <Compile Include="TryItTests.fs" />
+        <Compile Include="ParsingTests.fs" />
         <Compile Include="Program.fs" />
         <Content Include="day1\input.txt" />
         <None Include="day1\part1Andpart2.fsx" />
@@ -26,6 +28,7 @@
         <PackageReference Include="coverlet.collector" Version="1.3.0" />
         <PackageReference Include="Unquote" Version="5.0.0" />
         <PackageReference Include="xunit" Version="2.4.1" />
+        <PackageReference Include="xunit.abstractions" Version="2.0.3" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
