--- a/AdventCode2020/AdventCode2020.fsproj
+++ b/AdventCode2020/AdventCode2020.fsproj
@@ -20,6 +20,7 @@
 
     <ItemGroup>
         <PackageReference Include="FParsec" Version="1.1.1" />
+        <PackageReference Include="FSharp.Text.RegexProvider" Version="2.1.0" />
         <PackageReference Include="FsUnit" Version="4.0.2" />
         <PackageReference Include="FsUnit.xUnit" Version="4.0.2" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
