Day 4 complete. Some issues. Need better testing.

--- a/AdventCode2020/AdventCode2020.fsproj
+++ b/AdventCode2020/AdventCode2020.fsproj
@@ -18,6 +18,8 @@
         <Content Include="day2\input.txt" />
         <None Include="day3\day3.fsx" />
         <Content Include="day3\input.txt" />
+        <None Include="day4\day4-part1.fsx" />
+        <Content Include="day4\input.txt" />
     </ItemGroup>
 
     <ItemGroup>
