Day 6 customs questions part 1 done.

--- a/AdventCode2020/AdventCode2020.fsproj
+++ b/AdventCode2020/AdventCode2020.fsproj
@@ -12,6 +12,7 @@
         <Compile Include="TryItTests.fs" />
         <Compile Include="ParsingTests.fs" />
         <Compile Include="BoardingPassTests.fs" />
+        <Compile Include="CustomsTests.fs" />
         <Compile Include="Program.fs" />
         <Content Include="day1\input.txt" />
         <None Include="day1\part1Andpart2.fsx" />
@@ -22,6 +23,7 @@
         <None Include="day4\day4-part1.fsx" />
         <Content Include="day4\input.txt" />
         <Content Include="day5\input.txt" />
+        <Content Include="day6\input.txt" />
     </ItemGroup>
 
     <ItemGroup>
